--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,25 @@
   background-position: center;
   height: 100%;
   width: 100%;
+  text-align: center;
 } 
+
+ 
+.table { 
+   width:70% !important;
+   margin: 0 auto;  
+   margin-top:5vh;
+}
+
 
 .NavigationBar {
   margin-top: 0vh;
-  height:1vh
+  height:0vh
 }
 
 .FormSpacing{ 
-
-  min-height: 80vh;
+  position:fixed;
+  min-height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,46 +33,224 @@
   width:40vw;
 
 }
+th{
+  text-align:center; 
+  font-size: 20px;
+}
+
+td{
+  text-align:left; 
+  font-size: 15px;
+}
 
 .Login {
-  margin-top: -8vh;
-  margin-left: -6.8vh;
-  margin-bottom: 2vh;
-  margin-right: -6.7vh;
+  margin-top: -7vh;
+  margin-left: -5.7vh;
+  margin-bottom: 4vh;
+  margin-right: -5.7vh;
   padding: 1px;
   border-bottom-width: 2px;
+  border-bottom: 2px solid rgba(27, 4, 2, 0.555);
 }
 
-h1 {
-  text-align: center;
-  height:50px;
-  border-bottom: 2px solid rgba(27, 4, 2, 0.781);
-}
-
-
-h1{ 
-  color: rgba(2, 5, 27, 0.856); 
-}
 
 .FormColour {
   padding: 50px; /*makes it look neat*/
   border-radius: 2px; /*or 2px*/
   border: 2px solid rgba(27, 4, 2, 0.5);
-  background-color:#29201dd8;
+  background-color:#29201d;
   
+}
+
+button{ 
+  margin: 0 auto;  
+  margin-top:-5vh;
 }
 
 input[type="text"], textarea {
 
-  background-color: #29201dbe; 
+  background-color:#2F1E27 
 
 }
 input[type="password"], textarea {
 
-  background-color :#29201dad; 
+  background-color :#2F1E27
+}
+
+.Nav {
+  background-color: #F16E10;
+}
+
+.Search{ 
+   margin-bottom:-3vh;
+}
+
+.Search input[type=text] {
+  float: right;
+  padding: 2px;
+  border: none;
+  margin-top: 24px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+
+
+.enjoy-css {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  cursor: pointer;
+  border: none;
+  font: italic normal bold 60px/normal "Passero One", Helvetica, sans-serif;
+  color: rgba(124,21,21,1);
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  text-shadow: 0 1px 0 rgb(204,204,204) , 0 2px 0 rgb(201,201,201) , 0 3px 0 rgb(187,187,187) , 0 4px 0 rgb(185,185,185) , 0 5px 0 rgb(170,170,170) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 5px 10px rgba(0,0,0,0.247059) , 0 10px 10px rgba(0,0,0,0.2) , 0 20px 20px rgba(0,0,0,0.14902) ;
+  -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -webkit-transform: rotateX(-0.2811266146deg) rotateY(-2.291831180523293deg)   ;
+  transform: rotateX(-0.2811266146deg) rotateY(-2.291831180523293deg)   ;
+}
+
+.enjoy-css:hover {
+  font: italic normal bold 72px/normal "Passero One", Helvetica, sans-serif;
+  color: rgba(124,24,24,1);
+  text-shadow: 0 1px 0 rgba(255,255,255,1) , 0 2px 0 rgba(255,255,255,1) , 0 3px 0 rgba(255,255,255,1) , 0 4px 0 rgba(255,255,255,1) , 0 5px 0 rgba(255,255,255,1) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 -5px 10px rgba(0,0,0,0.247059) , 0 -7px 10px rgba(0,0,0,0.2) , 0 -15px 20px rgba(0,0,0,0.14902) ;
+  -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+  -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+  -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+  transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1) 10ms;
+  -webkit-transform: none;
+  transform: none;
+}
+
+.SubTitle {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  cursor: pointer;
+  border: none;
+  font: normal 36px/normal "Arial Black", Gadget, sans-serif;
+  color: rgba(10,10,2,1);
+  text-align: center;
+  text-indent: 700px;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  text-shadow: 0 1px 0 rgb(219, 49, 7) , 0 2px 0 rgb(204, 27, 14) , 0 3px 0 rgb(212, 27, 14) , 0 4px 0 rgb(218, 129, 13) , 0 5px 0 rgb(224, 87, 8) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 5px 10px rgba(0,0,0,0.247059) , 0 10px 10px rgba(0,0,0,0.2) , 0 20px 20px rgba(0,0,0,0.14902) ;
+  -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+.SubTitle:hover {
+  text-shadow: 0 1px 0 rgb(207, 204, 12) , 0 2px 0 rgb(180, 211, 7) , 0 3px 0 rgb(197, 148, 12) , 0 4px 0 rgb(197, 179, 13) , 0 5px 0 rgba(255,255,255,1) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 -5px 10px rgba(0,0,0,0.247059) , 0 -7px 10px rgba(0,0,0,0.2) , 0 -15px 20px rgba(0,0,0,0.14902) ;
+  -webkit-transition: all 200ms cubic-bezier(0.25, 0.25, 0.75, 0.75) 10ms;
+  -moz-transition: all 200ms cubic-bezier(0.25, 0.25, 0.75, 0.75) 10ms;
+  -o-transition: all 200ms cubic-bezier(0.25, 0.25, 0.75, 0.75) 10ms;
+  transition: all 200ms cubic-bezier(0.25, 0.25, 0.75, 0.75) 10ms;
+}
+
+
+html, body{
+  background:#2F1E27;
+}
+
+body{
+  counter-reset:section;
+  text-align:center;
+}
+
+.container{
+  top:200px;
 
 }
 
+.container h1, .container span{
+  font-family:"Pt Sans", helvetica, sans-serif;
+}
+
+.container h1{
+  text-align:center;
+  color:rgb(99, 15, 78);
+  font-weight:400;
+  font-size:2em; 
+  margin-top:50px;
+}
+
+.container h2{
+  font-family:"droid serif";
+  font-style:italic;
+  color:#9c450a; 
+  text-align:center;
+  font-size:1.2em;
+  margin-top:100px;
+  margin-bottom:10px;
+}
+
+.container form span:before {
+  counter-increment:section;
+  content:counter(section);
+  border:2px solid #4c2639;
+  width:40px;
+  height:40px;
+  color:#fff;
+  display:inline-block;
+  border-radius:50%;
+  line-height:1.6em;
+  font-size:1.5em;
+  position:relative;
+  left:-22px;
+  top:-11px;
+  background:#2F1E27;
+}
+
+form{
+  margin-bottom:25px;
+  display:inline-block;
+}
+
+.fields{
+  border-left:2px solid #9c450a;
+  margin-top:30px;
+}
+
+.container span{
+    margin-bottom:30px; 
+    display:inline-block;
+}
+
+.container span:last-child{
+   margin-bottom:-11px;
+}
+
+input{
+  border:none;
+  outline:none;
+  display:inline-block;
+  height:34px;
+  vertical-align:middle;
+  position:relative;
+  bottom:14px;
+  right:9px;
+  border-radius:22px;
+  width:220px;
+  box-sizing:border-box;
+  padding:0 18px; 
+}
+
+input[type="button"]{ 
+  background:rgba(197,62,126,.33) ! important;
+  color:rgb(189, 186, 183);
+  position:relative;
+  left:9px;
+  top:25px; 
+  width:100px;
+  cursor:pointer;
+}
 
 
 @keyframes img-spin {
@@ -74,5 +261,3 @@ input[type="password"], textarea {
     transform: rotate(360deg);
   }
 } 
-
-
