--- a/src/App.css
+++ b/src/App.css
@@ -106,11 +106,11 @@ input[type="text"], textarea {
 }
 input[type="password"], textarea {
 
-  background-color :#2F1E27
+  background-color :#2F1E27;
+ 
 }
 
 input[type="email"], textarea {
-
   background-color:#2F1E27 
 
 }
@@ -154,15 +154,14 @@ input[type="email"], textarea {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
-  cursor: pointer;
   border: none;
   font: normal 36px/normal "Arial Black", Gadget, sans-serif;
-  color: rgba(10,10,2,1);
+  color: rgb(0, 51, 26);
   text-align: center;
   text-indent: 80px;
   -o-text-overflow: clip;
   text-overflow: clip;
-  text-shadow: 0 1px 0 rgb(219, 49, 7) , 0 2px 0 rgb(204, 27, 14) , 0 3px 0 rgb(212, 27, 14) , 0 4px 0 rgb(218, 129, 13) , 0 5px 0 rgb(224, 87, 8) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 5px 10px rgba(0,0,0,0.247059) , 0 10px 10px rgba(0,0,0,0.2) , 0 20px 20px rgba(0,0,0,0.14902) ;
+  text-shadow: 0 1px 0 , 0 2px 0 rgb(204,204,204), 0 3px 0 rgb(204,204,204), 0 4px 0 rgb(204,204,204) , 0 5px 0 rgb(204,204,204) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 5px 10px rgba(0,0,0,0.247059) , 0 10px 10px rgba(0,0,0,0.2) , 0 20px 20px rgba(0,0,0,0.14902) ;
   -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
   -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
   -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
@@ -198,8 +197,8 @@ body{
 }
 
 .container h1{
-  text-align:center;
-  color:rgb(99, 15, 78);
+  text-align: center;
+  color:black;
   font-weight:400;
   font-size:2em; 
   margin-top:50px;
@@ -210,7 +209,7 @@ body{
   font-style:italic;
   color:#9c450a; 
   text-align:center;
-  font-size:1.2em;
+  font-size:1.5em;
   margin-top:60px;
   margin-bottom:10px;
 }
@@ -224,7 +223,7 @@ body{
   color:#fff;
   display:inline-block;
   border-radius:50%;
-  line-height:1.6em;
+  line-height:1.4em;
   font-size:1.5em;
   position:relative;
   left:-22px;
@@ -240,6 +239,7 @@ form{
 .fields{
   border-left:2px solid #9c450a;
   margin-top:30px;
+     color:white;
 }
 
 .container span{
@@ -265,6 +265,8 @@ input{
   box-sizing:border-box;
   padding:0 18px; 
 }
+
+
 
 input[type="button"]{ 
   background:rgba(197,62,126,.33) ! important;
