Added video to homepage + changes to background

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,15 @@
   text-align: center;
 } 
 
+.video { 
+  position: fixed;
+  top: 80%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: -100;
+  transform: translate(-50%, -50%);
+}
 
 .Logocontainer{ 
   margin-top:-100vh;
@@ -19,7 +28,23 @@
    margin-top:5vh;
 }
 
+.Everything Account_Login { 
+-webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 
+  border: none;
+  font: italic normal bold 60px/normal "Passero One", Helvetica, sans-serif;
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -webkit-transform: rotateX(-0.2811266146deg) rotateY(-2.291831180523293deg)   ;
+  transform: rotateX(-0.2811266146deg) rotateY(-2.291831180523293deg)   ;
+}
 .NavigationBar {
   margin-top: 0vh;
   height:0vh
